stop stretching member faces out on profile pages

--- a/site/media/master/_style.css
+++ b/site/media/master/_style.css
@@ -309,7 +309,6 @@ body {
 .new_pv .my-members img {
   float: left;
   height: 70px;
-  width: 70px;
   margin-right: 10px;
 }
 .new_pv .my-members a {
