--- a/site/media/master/style.less
+++ b/site/media/master/style.less
@@ -467,7 +467,6 @@
 				img{
 					float: left;
 					height: 70px;
-					width: 70px;
 					margin-right: 10px;
 				}
 
